# dvc-k8s-parallel-runner

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  Jenkinsfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yaml  kernelCA.crt
docs/: architecture.drawio
neuromancer/: cli.py  neuromancer.py  path.py  queue.py  wintermute.py
tests/: test_neuromancer.py  test_orchestrate.py  test_queue.py  test_repro.py
tests/data_fixtures/repo/pipelines/: sessions.yaml
tests/data_fixtures/repo/pipelines/first/: dvc.yaml
tests/data_fixtures/repo/pipelines/second/: dvc.yaml  params.yaml
tests/data_fixtures/repo/pipelines/third/: dvc.yaml
